0.2.2.2 
 - when using "songinfo" query, LMS wants a client_id, although documented differently
 - max read_wait fixed at 20s
 - add pacing option to prevent buffering to be greedy (use <pacing_size)
 - cli_wait set at 1s

0.2.2.1
 - Player name set from LMS are now persistent, no need to set it from the plugin settings
 - adding <friendly_name> parameter to keep trace or true player name
 - Player auto refresh could be in conflict wihh external modifications
 
0.2.2.0
 - move <server> parameter from global to <common> (parameter copy for compatibility needs to be removed later)
 - fix server switch & rediscovery
 - armv6 static build was not listed
	
0.2.1.0
 - if MAC cannot be retrieved, create a fake one from UDN
 - force first 2 bytes of MAC to be 0xcc unless <mac_address> is set in config file
 - remove <base_mac> parameter

0.2.0.3-dev-1
 - in stream thread, endtok static parameter was breaking multi-thread !
 - (dev-2) hash32 check for NULL string

0.2.0.2
 - Change libupnp to handle AndroidTV request (range 0-1 to try to guess file size)
 - Bring back ppc version
 - Add x86-64-static version
 - Build a proper softfp for armv5
 - (dev-3) mdns search was missing some answers ==> causing device to be missed
 - (dev-4) detect ip:port change
 

0.2.0.1
 - Duration should not be adjusted when playing a live webradio
 - armv6hf version runs on raspberry pi B
 - Remove ppc build
 - Gathering metadata when scanning was creating usage of a NULL pointer
 - mDNS search can be improved by forcing host IP address using <upnp_socket>
 - When LMS was scanning, an overflow was happening in metadata gathering

0.2.0.0
 - Use mDNS for device detection
 - Support grouped devices (appear as an extra player)
 - Volume changes are now at device level (not session level)
 - Volume commands can ignored when not playing
 - Volume changes on the CC are forwarded to LMS, unless device is a group