@@ -37,6 +37,8 @@ char *url_decode(char *str);
 char *stristr(char *s1, char *s2);
 char *toxml(char *src);
 u32_t hash32(char *str);
+bool get_interface(struct in_addr *addr);
+bool get_local_hostname(char *out, size_t out_len);
 
 #define LOG_ERROR(fmt, ...) logprint("%s %s:%d " fmt "\n", logtime(), __FUNCTION__, __LINE__, ##__VA_ARGS__)
 #define LOG_WARN(fmt, ...)  if (*loglevel >= lWARN)  logprint("%s %s:%d " fmt "\n", logtime(), __FUNCTION__, __LINE__, ##__VA_ARGS__)
