@@ -1,16 +1,16 @@
 <?xml version='1.0' standalone='yes'?>
 <extensions>
-  <module>Plugins::CastBridge::Plugin</module>
-  <defaultState>enabled</defaultState>
-  <version>0.2.2.2-dev-2</version>
   <name>PLUGIN_CASTBRIDGE</name>
+  <description>PLUGIN_CASTBRIDGE_DESC</description>
+  <optionsURL>plugins/CastBridge/settings/basic.html</optionsURL>
   <targetApplication>
     <minVersion>7.7</minVersion>
     <maxVersion>*.*</maxVersion>
     <id>SlimServer</id>
   </targetApplication>
-  <optionsURL>plugins/CastBridge/settings/basic.html</optionsURL>
+  <module>Plugins::CastBridge::Plugin</module>
   <email>philippe_44@outlook.com</email>
+  <defaultState>enabled</defaultState>
+  <version>0.2.2.2-dev-3</version>
   <creator>Philippe</creator>
-  <description>PLUGIN_CASTBRIDGE_DESC</description>
 </extensions>
