@@ -1,15 +1,15 @@
 0.2.2.2 
  - when using "songinfo" query, LMS wants a client_id, although documented differently
- - max_read_wait fixed at 20s
+ - max read_wait fixed at 20s
  - add pacing option to prevent buffering to be greedy (use <pacing_size)
  - cli_wait set at 1s
- - Refresh of configuration file was not adding missing parameters
- - Handle PPC byte ordering
-
+ - (dev-3) Handle PPC byte ordering
+ - (dev3) mDNS interface change
+ 
 0.2.2.1
  - Player name set from LMS are now persistent, no need to set it from the plugin settings
  - adding <friendly_name> parameter to keep trace or true player name
- - Player auto refresh could be in conflict wihh external modifications
+ - Player auto refresh could be in conflict with external modifications
  
 0.2.2.0
  - move <server> parameter from global to <common> (parameter copy for compatibility needs to be removed later)
